# codesearch

./: .codesearchrc.example  .gitignore  ADVANCED_FEATURES_DEMO.md  ADVANTAGES_OVER_GREP.md  ARCHITECTURE.md  CODE_METRICS.md  Cargo.toml  DESIGN_METRICS.md  FINAL_SUMMARY.md  GRAPH_ANALYSIS.md  IMPLEMENTATION_PHASE2.md  IMPLEMENTATION_PHASE3.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  PERFORMANCE_FEATURES.md  README.md  TODO.md  UPDATE_OLD_TESTS.md  fix_mcp_tests.sh  spec.md  tarpaulin.toml
.github/workflows/: coverage.yml
benches/: search_benchmark.rs
examples/: .gitignore  README.md  circular_demo.rs  deadcode_demo.py  deadcode_demo.rs  error_handling.rs  go_example.go  java_example.java  javascript_example.js  python_example.py  rust_example.rs  search_patterns.md  test_search.sh  typescript_example.ts
src/: analysis.rs  ast.rs  cache.rs  cache_lru.rs  callgraph.rs  cfg.rs  circular.rs  circular_tests.rs  cli.rs  complexity.rs  complexity_tests.rs  config.rs  deadcode.rs  depgraph.rs  dfg.rs  duplicates.rs  errors.rs  export.rs  favorites.rs  fs.rs  githistory.rs  graphs.rs  index.rs  interactive.rs  language.rs  lib.rs  main.rs  mcp_server.rs  memopt.rs  parser.rs  pdg.rs  remote.rs  search.rs  search_tests.rs  theme.rs  traits.rs  types.rs  watcher.rs
src/codemetrics/: complexity.rs  helpers.rs  maintainability.rs  mod.rs  size.rs
src/commands/: analysis.rs  graph.rs  mod.rs  search.rs
src/deadcode/: detectors.rs  helpers.rs  mod.rs  types.rs
src/designmetrics/: analysis.rs  extractors.rs  mod.rs  reporting.rs  types.rs
src/duplicates/: detector.rs  mod.rs  normalize.rs  similarity.rs  types.rs
src/language/: definitions.rs  mod.rs  types.rs  utilities.rs
src/mcp/: mod.rs  params.rs  schemas.rs  tools.rs
src/search/: core.rs  engine.rs  fuzzy.rs  mod.rs  pure.rs  semantic.rs  utilities.rs
tests/: cross_file_tests.rs  integration_e2e.rs  integration_tests.rs  mcp_tests.rs  mcp_tests.rs.old  proptest_search.rs
tests/fixtures/: mod.rs
