[package]
name = "code-search"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A fast CLI tool for searching codebases"
license = "MIT"

[[bin]]
name = "code-search"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
regex = "1.10"
walkdir = "2.4"
ignore = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.1"
anyhow = "1.0"
thiserror = "1.0"
fuzzy-matcher = "0.3"
levenshtein = "1.0"

[dev-dependencies]
tempfile = "3.8"
