[package]
name = "codesearch"
version = "0.1.2"
edition = "2024"
authors = ["Ying Kit WONG"]
description = "A fast CLI tool for searching codebases"
license = "Apache-2.0"

[lib]
name = "codesearch"
path = "src/lib.rs"

[[bin]]
name = "codesearch"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
regex = "1.10"
walkdir = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
csv = "1.3"
colored = "2.1"
anyhow = "1.0"
thiserror = "1.0"
fuzzy-matcher = "0.3"
chrono = { version = "0.4", features = ["serde"] }
rayon = "1.8"
dashmap = "5.5"
ahash = "0.8"
lazy_static = "1.4"
rmcp = { version = "0.10", features = ["server", "macros", "transport-io"], optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }
schemars = { version = "1.2", features = ["derive"], optional = true }

[features]
default = []
mcp = ["rmcp", "tokio", "schemars"]

[dev-dependencies]
tempfile = "3.8"
