[package]
name = "codesearch"
version = "0.1.5"
edition = "2024"
authors = ["Ying Kit WONG"]
description = "A fast, intelligent CLI tool with multiple search modes (regex, fuzzy, semantic), code analysis, and dead code detection for 48+ languages"
license = "Apache-2.0"
repository = "https://github.com/yingkitw/codesearch"
homepage = "https://github.com/yingkitw/codesearch"
documentation = "https://docs.rs/codesearch"

[lib]
name = "codesearch"
path = "src/lib.rs"

[[bin]]
name = "codesearch"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
regex = "1.10"
walkdir = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
csv = "1.3"
colored = "2.1"
anyhow = "1.0"
thiserror = "1.0"
fuzzy-matcher = "0.3"
chrono = { version = "0.4", features = ["serde"] }
rayon = "1.8"
dashmap = "5.5"
ahash = "0.8"
lazy_static = "1.4"
notify = "6.1"
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-python = "0.20"
tree-sitter-javascript = "0.20"
git2 = "0.18"
reqwest = { version = "0.11", features = ["blocking", "json"] }
memmap2 = "0.9"
urlencoding = "2.1"
tempfile = "3.8"
rmcp = { version = "0.12", features = ["server", "macros", "transport-io"], optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }
schemars = { version = "1.2", features = ["derive"], optional = true }

[features]
default = []
mcp = ["rmcp", "tokio", "schemars"]

[dev-dependencies]
proptest = "1.4"
criterion = "0.5"

[dependencies.lru]
version = "0.12"
